[workspace]
resolver = "3"
members = ["crates/*"]

[workspace.package]
version = "1.2.0"
edition = "2024"
rust-version = "1.88"  # raised from 1.85: time >=0.3.47 (RUSTSEC-2026-0009 fix) needs 1.88
license = "AGPL-3.0-only"
repository = "https://github.com/schubydoo/podspine"
authors = ["schubydoo"]

# Pinned per TAD §3 (verified 2026-07-03). Member crates opt in as each pipeline
# stage lands (`axum.workspace = true`, etc.); unreferenced entries stay inert.
[workspace.dependencies]
# http / serving
axum = "0.8.9"
axum-range = "1.0.0"
axum-extra = { version = "0.12.6", features = ["typed-header"] }
tower-http = { version = "0.7", features = ["fs", "timeout", "limit", "trace"] }
tokio = { version = "1.52", features = ["full"] }
# feed
rss = "2.1.0"
time = { version = "0.3.47", features = ["formatting", "parsing"] } # >=0.3.47: RUSTSEC-2026-0009
# probe / chapters (ffprobe is primary; mp4ameta is the pure-Rust fallback)
mp4ameta = "0.13.0"
# index / storage (bundled SQLite compiles into the static binary)
rusqlite = { version = "0.40", features = ["bundled"] }
# ui
maud = "0.27"
qrcode = { version = "0.14", default-features = false, features = ["svg"] }
# tokens (v1.5)
getrandom = "0.4"
base64 = "0.22"
blake3 = "1.5"
# scanning / watching
notify = "8"
walkdir = "2"
# config / cli
clap = { version = "4", features = ["derive", "env"] }
toml = "1.0"
serde = { version = "1", features = ["derive"] }
serde_json = "1"
# observability
tracing = "0.1"
tracing-subscriber = { version = "0.3", features = ["env-filter"] }
# errors
thiserror = "2"
anyhow = "1"
# process control (sync per-child timeout+kill for ffmpeg — the splitter is sync)
wait-timeout = "0.2"

[package]
name = "podspine"
description = "Self-hosted server that turns audiobook files into per-chapter podcast RSS feeds."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

# cargo-binstall: fetch the prebuilt release binary instead of compiling.
#   cargo binstall --git https://github.com/schubydoo/podspine podspine
# (`--git` because the workspace is publish=false — nothing is on crates.io.)
# Our assets are raw binaries named podspine-v{version}-{os}-{arch} with
# os=linux|darwin|windows and arch=amd64|arm64, which don't match binstall's
# default {target-arch}/{target-os}, so each supported target is mapped here.
# The Linux binaries are static musl, so they also serve the -gnu targets.
[package.metadata.binstall]
pkg-fmt = "bin"

[package.metadata.binstall.overrides.x86_64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-linux-amd64"
[package.metadata.binstall.overrides.aarch64-unknown-linux-musl]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-linux-arm64"
[package.metadata.binstall.overrides.x86_64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-linux-amd64"
[package.metadata.binstall.overrides.aarch64-unknown-linux-gnu]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-linux-arm64"
[package.metadata.binstall.overrides.x86_64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-darwin-amd64"
[package.metadata.binstall.overrides.aarch64-apple-darwin]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-darwin-arm64"
[package.metadata.binstall.overrides.x86_64-pc-windows-msvc]
pkg-url = "{ repo }/releases/download/v{ version }/podspine-v{ version }-windows-amd64.exe"

[[bin]]
name = "podspine"
path = "src/main.rs"

[dependencies]
podspine-config = { path = "crates/config" }
podspine-index = { path = "crates/index" }
podspine-scanner = { path = "crates/scanner" }
podspine-http = { path = "crates/http" }
tokio = { workspace = true }
anyhow = { workspace = true }
tracing-subscriber = { workspace = true }
