[package]
name = "podspine-config"
description = "clap/env/TOML resolution; validates the library root; startup preflight that execs ffmpeg/ffprobe -version and fails fast."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
