[package]
name = "podspine-http"
description = "Axum router: feed, audio (Range), and health routes with tower-http timeout/limit layers."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
axum = { workspace = true }
axum-range = { workspace = true }
axum-extra = { workspace = true }
tower-http = { workspace = true }
tower = { version = "0.5", features = ["limit"] }
tokio = { workspace = true }
podspine-index = { path = "../index" }
podspine-feed = { path = "../feed" }
podspine-ui = { path = "../ui" }
tracing = { workspace = true }
serde = { workspace = true }

[dev-dependencies]
podspine-scanner = { path = "../scanner" }
podspine-index = { path = "../index" }
axum = { workspace = true }
tokio = { workspace = true }
tower = { version = "0.5", features = ["util"] }
http-body-util = "0.1"
