[package]
name = "podspine-index"
description = "rusqlite access layer (bundled SQLite): book/episode/feed_token schema with idempotent upserts."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
rusqlite = { workspace = true }
thiserror = { workspace = true }
# feed tokens (v1.5): 128-bit random -> base64url; store only the BLAKE3 hash
getrandom = { workspace = true }
base64 = { workspace = true }
blake3 = { workspace = true }
