[package]
name = "podspine-prober"
description = "Thin ffprobe wrapper: reads embedded chapters, format duration, and cover-art presence."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
serde = { workspace = true }
serde_json = { workspace = true }
thiserror = { workspace = true }
