[package]
name = "podspine-scanner"
description = "Orchestrates probe -> split -> index for one audiobook; chapter-less fallback, idempotent re-scan, DRM skip."
version.workspace = true
edition.workspace = true
rust-version.workspace = true
license.workspace = true
repository.workspace = true
authors.workspace = true
publish = false

[dependencies]
podspine-prober = { path = "../prober" }
podspine-splitter = { path = "../splitter" }
podspine-index = { path = "../index" }
podspine-feed = { path = "../feed" }
thiserror = { workspace = true }
